Remove redundant class

--- a/01-css-methods/index.html
+++ b/01-css-methods/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <div class="external-method">
+    <div>
         <p>Style me via the external method</p>
     </div>
     <P>I would like to be internal with the internal method, please.</P>
