Update CSS methods link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>The Odin Project CSS Foundations</h1>
     <nav>
         <ul>
-            <l1><a href="./01-css-methods/index.html">01 CSS methods</a></l1>
+            <l1><a href="./01-css-methods/css-methods.html">01 CSS methods</a></l1>
             <l1><a href="#">02 Class id selectors</a></l1>
             <l1><a href="#">03 Grouping selectors</a></l1>
             <l1><a href="#">04 Chaining selectors</a></l1>
