Link class id and selectors page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <l1><a href="./01-css-methods/css-methods.html">01 CSS methods</a></l1>
-            <l1><a href="#">02 Class id selectors</a></l1>
+            <l1><a href="./02-class-id-selectors/class-id-selectors.html">02 Class id selectors</a></l1>
             <l1><a href="#">03 Grouping selectors</a></l1>
             <l1><a href="#">04 Chaining selectors</a></l1>
             <l1><a href="#">05 Descendant combinator</a></l1>
