--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOP CSS</title>
+    <title>The Odin Project - CSS Foundations</title>
 </head>
 <body>
     <h1>The Odin Project CSS Foundations</h1>
