--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>The Odin Project CSS Foundations</h1>
     <nav>
         <ul>
-            <l1><a href="./01-css-methods/css-methods.html">01 CSS methods</a></l1>
-            <l1><a href="./02-class-id-selectors/class-id-selectors.html">02 Class id selectors</a></l1>
-            <l1><a href="#">03 Grouping selectors</a></l1>
-            <l1><a href="#">04 Chaining selectors</a></l1>
-            <l1><a href="#">05 Descendant combinator</a></l1>
-            <l1><a href="#">06 Cascade fix</a></l1>
+            <li><a href="./01-css-methods/css-methods.html">01 CSS methods</a></li>
+            <li><a href="./02-class-id-selectors/class-id-selectors.html">02 Class id selectors</a></li>
+            <li><a href="#">03 Grouping selectors</a></li>
+            <li><a href="#">04 Chaining selectors</a></li>
+            <li><a href="#">05 Descendant combinator</a></li>
+            <li><a href="#">06 Cascade fix</a></li>
         </ul>
     </nav>
 </body>
