--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="./01-css-methods/css-methods.html">01 CSS methods</a></li>
             <li><a href="./02-class-id-selectors/class-id-selectors.html">02 Class id selectors</a></li>
-            <li><a href="#">03 Grouping selectors</a></li>
+            <li><a href="./03-grouping-selectors/03-grouping-selectors.html">03 Grouping selectors</a></li>
             <li><a href="#">04 Chaining selectors</a></li>
             <li><a href="#">05 Descendant combinator</a></li>
             <li><a href="#">06 Cascade fix</a></li>
