Create Fix the Cascade page and link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="./03-grouping-selectors/03-grouping-selectors.html">03 Grouping selectors</a></li>
             <li><a href="./04-chaining-selectors/chaining-selectors.html">04 Chaining selectors</a></li>
             <li><a href="./05-descendant-combinator/descendant-combinator.html">05 Descendant combinator</a></li>
-            <li><a href="#">06 Cascade fix</a></li>
+            <li><a href="06-cascade-fix/cascade-fix.html">06 Cascade fix</a></li>
         </ul>
     </nav>
 </body>
