--- a/margin-and-padding/index.html
+++ b/margin-and-padding/index.html
@@ -7,6 +7,10 @@
     <title>Margin and Padding</title>
 </head>
 <body>
-    
+    <h1>Margin and Padding</h1>
+    <ul>
+        <li><a href="#">01 Margin and Padding</a></li>
+        <li><a href="#">02 Margin and Padding</a></li>
+    </ul>
 </body>
 </html>
