Link 02 margin and padding to index

--- a/margin-and-padding/index.html
+++ b/margin-and-padding/index.html
@@ -10,7 +10,7 @@
     <h1>Margin and Padding</h1>
     <ul>
         <li><a href="01-margin-and-padding/01-margin-and-padding.html">01 Margin and Padding</a></li>
-        <li><a href="#">02 Margin and Padding</a></li>
+        <li><a href="02-margin-and-padding/02-margin-and-padding.html">02 Margin and Padding</a></li>
     </ul>
 </body>
 </html>
